update lại learning-serivice